[Editorial] Modernize spelling

--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -1055,7 +1055,7 @@
 							<td epub:type="z3998:persona">Bassanio</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Sweet doctor, you shall be my bed-fellow:</span>
+									<span>Sweet doctor, you shall be my bedfellow:</span>
 									<br/>
 									<span>When I am absent, then lie with my wife.</span>
 								</p>
