--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -1316,7 +1316,7 @@
 									<br/>
 									<span>That do converse and waste the time together,</span>
 									<br/>
-									<span>Whose souls do bear an equal yoke Of love,</span>
+									<span>Whose souls do bear an equal yoke of love,</span>
 									<br/>
 									<span>There must be needs a like proportion</span>
 									<br/>
