--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -408,28 +408,26 @@
 						</tr>
 						<tr>
 							<td/>
-							<td>
-								<blockquote epub:type="z3998:song">
-									<p>
-										<span>Tell me where is fancy bred,</span>
-										<br/>
-										<span>Or in the heart, or in the head?</span>
-										<br/>
-										<span>How begot, how nourished?</span>
-										<br/>
-										<span class="i1">Reply, reply.</span>
-										<br/>
-										<span>It is engender’d in the eyes,</span>
-										<br/>
-										<span>With gazing fed; and fancy dies</span>
-										<br/>
-										<span>In the cradle where it lies.</span>
-										<br/>
-										<span class="i1">Let us all ring fancy’s knell</span>
-										<br/>
-										<span class="i1">I’ll begin it,⁠—Ding, dong, bell.</span>
-									</p>
-								</blockquote>
+							<td epub:type="z3998:song">
+								<p>
+									<span>Tell me where is fancy bred,</span>
+									<br/>
+									<span>Or in the heart, or in the head?</span>
+									<br/>
+									<span>How begot, how nourished?</span>
+									<br/>
+									<span class="i1">Reply, reply.</span>
+									<br/>
+									<span>It is engender’d in the eyes,</span>
+									<br/>
+									<span>With gazing fed; and fancy dies</span>
+									<br/>
+									<span>In the cradle where it lies.</span>
+									<br/>
+									<span class="i1">Let us all ring fancy’s knell</span>
+									<br/>
+									<span class="i1">I’ll begin it,⁠—Ding, dong, bell.</span>
+								</p>
 							</td>
 						</tr>
 						<tr>
