--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -895,7 +895,15 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Launcelot</td>
-							<td>I will go before, sir. Mistress, look out at window, for all this, There will come a Christian boy, will be worth a Jewess’ eye. <i epub:type="z3998:stage-direction">Exit.</i></td>
+							<td epub:type="z3998:verse">
+							    <p>
+									<span>I will go before, sir. Mistress, look out at window, for all this;</span>
+									<br/>
+								    <span>There will come a Christian by,</span>
+							        <br/>
+							        <span>will be worth a Jewess’ eye. <i epub:type="z3998:stage-direction">Exit.</i></span>
+							    </p>
+							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Shylock</td>
