--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -51,7 +51,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Salanio</td>
-							<td>Let me isay “amen” betimes, lest the devil cross my prayer, for here he comes in the likeness of a Jew.</td>
+							<td>Let me say “amen” betimes, lest the devil cross my prayer, for here he comes in the likeness of a Jew.</td>
 						</tr>
 						<tr>
 							<td/>
