--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -1642,7 +1642,7 @@
 									<br/>
 									<span>But we’ll outface them, and outswear them too.</span>
 									<br/>
-									<span><i epub:type="z3998:stage-direction">Aloud.</i> Away! make haste: thou knowist where I will tarry.</span>
+									<span><i epub:type="z3998:stage-direction">Aloud.</i> Away! make haste: thou know’st where I will tarry.</span>
 								</p>
 							</td>
 						</tr>
